[package]
name = "rusty-mqtt"
version = "0.2.0"
authors = ["Leonardo Razovic <leorazzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
log = "0.4.8"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
clap = "2.33.0"
mqtt-protocol = { version = "0.8.1", features = ["async"] }
tokio = { version = "0.2.16", features = ["full"] }
futures = "0.3.4"
