[package]
name = "rusty-mqtt"
version = "0.4.0"
authors = ["Leonardo Razovic <leorazzo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
log = "0.4.14"
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.33.3"
mqtt-protocol = { version = "0.10.0", features = ["async"] }
tokio = { version = "1.10.1", features = ["full"] }
futures = "0.3.16"
